jump directly to form after submission

--- a/app/views/utopias/_show_public.html.erb
+++ b/app/views/utopias/_show_public.html.erb
@@ -57,5 +57,5 @@
   <%= @utopia.effect_fun %>
 </p>
 
-<%= link_to "Weitere Utopie einreichen", root_path %>
+<%= link_to "Weitere Utopie einreichen", root_path + '#submission-form' %>
 
