--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div id="page-5" class="page">
-
+	<a id="submission-form"></a>
 	<% if params[:id] %>
 		<h2>Ihre Utopie:</h2>
 		<%= render partial: 'utopias/show_public' %>
