show utopia in admin area

--- a/app/views/utopias/_show_public.html.erb
+++ b/app/views/utopias/_show_public.html.erb
@@ -1,5 +1,7 @@
-<% if @utopia.image.exists? %>
-	<%= image_tag @utopia.image.url(:medium) %>
+<% if @utopia.image %>
+	<% if @utopia.image.exists? %>
+		<%= image_tag @utopia.image.url(:medium) %>
+	<% end %>
 <% end %>
 
 <p>
