--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,45 +1,70 @@
-<div id="scroll-header-1">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014</span></div>
-<div id="scroll-header-2">Bringen auch Sie Ihre Utopie an die Börse. >> Folgen Sie dem <a href="#submission-form">Link</a></div>
-<div id="icon"></div>
-<div id="claim">Seien Sie dabei, wenn Utopien live gehandelt werden.</div>
+<div id="scroll-header-1">CK EXCHANGE <span class="scroll-highlight">18 01 2014</span></div>
+<div id="scroll-header-2">gen auch Sie Ihre Utopie an die Börse. >> Folgen Sie dem <a href="#submission-form">Link</a></div>
 
-<div id="page-1" class="page"></div>
-<div id="page-2" class="page"></div>
-<div id="page-3" class="page"></div>
-
-<div id="page-4" class="page">
-	<p>UTOPIA STOCK EXCHANGE (USE) macht das Dortmunder U zur Börse für Utopien und das Unionviertel zum neuen Dortmunder Börsenviertel.</p>
-	<p>Jede Stadt braucht einen Ort, an dem Bürgerinnen und Bürger Visionen für ihre Stadt in die Hand nehmen können. Sie drehen und wenden, ihren Realitätsgehalt überprüfen, ihre Strahlkraft spüren. Ein Zentrum, an dem – wie an der Börse – harte Realität auf radikale Phantasie trifft, an dem kollektiv geträumt, gerhandelt, bewertet und vielleicht abgestürzt wird. An dem die Zukunft ihrer Stadt von den Bürgerinnen und Bürgern selbst aufs Spiel gesetzt werden kann.</p> 
-	<p>Ein solches Zentrum gibt es in Dortmund bereits: Das Dortmunder U. UTOPIA STOCK EXCHANGE (USE) unternimmt den Versuch, das besondere Potential dieses Ortes auf die Spitze zu treiben: als Börse für Utopien. USE gibt ökonomische Prinzipien wie Spekulation und Teilhabe zurück an Bürgerinnen und Bürger der Stadt. USE handelt Utopien für Dortmund. An die Börse gebracht von Utopisten aus Dortmund. Ideen zur Verbesserung der Stadt, des Selbst oder der Welt – von Dortmund aus gesehen.</p>
-	<p>USE lässt den Ideen freien Lauf und fragt: Was würden Sie machen, wenn Geld, Zeit und Machbarkeit ausnahmsweise einmal überhaupt keine Rolle spielten? Wie sollte Dortmund sein, wenn alles möglich wäre? Was wäre anders in einer perfekten Welt? Wie wären Politik, Wirtschaft und soziales Miteinander in ihrer Wunschwelt organisiert? Beim Handelsabend am 18. Januar 2014 im Dortmunder U entscheidet sich, welche Utopie die meisten Anhänger findet und was am Ende zählt: Geld oder der Glaube an die Zukunft?</p>
-	<p>USE ist ein Spielformat von Invisible Playground – einer Künstlergruppe, die Spiele für Städte entwickelt, gemeinsam mit Dortmunder Bürgerinnen und Bürgern.</p>
-	<p>Also, jetzt mal konkret? Was können Sie tun?</p>
+<div id="page-1" class="page">
+		<img class="full-background" src="/assets/use-logos.jpg">
 </div>
 
-<div id="page-5" class="page">
-	<a id="submission-form"></a>
-	<% if params[:id] %>
-		<h2>Ihre Utopie:</h2>
-		<%= render partial: 'utopias/show_public' %>
-	<% else %>
-		<h2>Mit diesem Formular bringen auch Sie Ihre Utopie an die Börse:</h2>
-		<%= render partial: 'utopias/form_public' %>
-	<% end %>
+<div id="spacer-1">
+	<div id="icon"></div>
+	<div id="claim">Seien Sie dabei, wenn Utopien live gehandelt werden.</div>
+</div>
 
+<div id="page-2" class="page">
+		<img class="full-background" src="/assets/u-panorama-kurve.jpg">
+</div>
+
+<div id="page-3" class="page">
+		<img class="full-background" src="/assets/nyse.jpg">
+</div>
+
+<div id="page-4" class="page">
+	<div class="page-content">
+		<div class="row">
+			<div class="col-2">
+				<p>UTOPIA STOCK EXCHANGE (USE) macht das Dortmunder U zur Börse für Utopien und das Unionviertel zum neuen Dortmunder Börsenviertel.</p>
+				<p>Jede Stadt braucht einen Ort, an dem Bürgerinnen und Bürger Visionen für ihre Stadt in die Hand nehmen können. Sie drehen und wenden, ihren Realitätsgehalt überprüfen, ihre Strahlkraft spüren. Ein Zentrum, an dem – wie an der Börse – harte Realität auf radikale Phantasie trifft, an dem kollektiv geträumt, gerhandelt, bewertet und vielleicht abgestürzt wird. An dem die Zukunft ihrer Stadt von den Bürgerinnen und Bürgern selbst aufs Spiel gesetzt werden kann.</p> 
+				<p>Ein solches Zentrum gibt es in Dortmund bereits: Das Dortmunder U. UTOPIA STOCK EXCHANGE (USE) unternimmt den Versuch, das besondere Potential dieses Ortes auf die Spitze zu treiben: als Börse für Utopien. USE gibt ökonomische Prinzipien wie Spekulation und Teilhabe zurück an Bürgerinnen und Bürger der Stadt. USE handelt Utopien für Dortmund.</p>
+			</div>
+			<div class="col-2">
+				<p> An die Börse gebracht von Utopisten aus Dortmund. Ideen zur Verbesserung der Stadt, des Selbst oder der Welt – von Dortmund aus gesehen.</p>
+				<p>USE lässt den Ideen freien Lauf und fragt: Was würden Sie machen, wenn Geld, Zeit und Machbarkeit ausnahmsweise einmal überhaupt keine Rolle spielten? Wie sollte Dortmund sein, wenn alles möglich wäre? Was wäre anders in einer perfekten Welt? Wie wären Politik, Wirtschaft und soziales Miteinander in ihrer Wunschwelt organisiert? Beim Handelsabend am 18. Januar 2014 im Dortmunder U entscheidet sich, welche Utopie die meisten Anhänger findet und was am Ende zählt: Geld oder der Glaube an die Zukunft?</p>
+				<p>USE ist ein Spielformat von Invisible Playground – einer Künstlergruppe, die Spiele für Städte entwickelt, gemeinsam mit Dortmunder Bürgerinnen und Bürgern.</p>
+				<p>Also, jetzt mal konkret? Was können Sie tun?</p>
+			</div>
+		</div>
+	</div>
+	<img class="full-background" src="/assets/kurve.png">
+</div>
+
+<a id="submission-form"></a>
+<div id="page-5" class="page">
+	<img class="full-background" src="/assets/stier.jpg">
+	<div class="page-content">
+		<% if params[:id] %>
+			<h2>Ihre Utopie:</h2>
+			<%= render partial: 'utopias/show_public' %>
+		<% else %>
+			<h2>Mit diesem Formular bringen Sie Ihre Utopie an die Börse:</h2>
+			<%= render partial: 'utopias/form_public' %>
+		<% end %>
+	</div>
 </div>
 
 <div id="page-6" class="page">
-	<h3>USE Imprint</h3>
-	<p>Utopia Stock Exchange:<br/>Das Börsen-Spiel von Invisible Playground<br/>in Zusammenarbeit mit HMKV Dortmund</p>
-	<p>Nach einer Idee von Carolin Hochleichter, Sebastian Quack und Jutta Wangemann</p>
-	<p>Team USE Dortmund: Manuel Buerger, Daniel Boy, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
-	<p>Gestaltung: The Laboratory of Manuel Bürger</p>
-	<p>Photocredits: XYZ</p>
-	<p>Mit freundlicher Unterstützung von:</p>
-	<div class="logos">
-		<img src="/assets/logo-ukr.png">
-		<img src="/assets/logo-hmkv.png">
-		<img src="/assets/logo-npn.png">
-		<img src="/assets/logo-ministerium.png">
+	<div class="page-content">
+		<h3>USE Imprint</h3>
+		<p>Utopia Stock Exchange:<br/>Das Börsen-Spiel von Invisible Playground<br/>in Zusammenarbeit mit HMKV Dortmund</p>
+		<p>Nach einer Idee von Carolin Hochleichter, Sebastian Quack und Jutta Wangemann</p>
+		<p>Team USE Dortmund: Manuel Buerger, Daniel Boy, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
+		<p>Gestaltung: The Laboratory of Manuel Bürger</p>
+		<p>Photocredits: XYZ</p>
+		<p>Mit freundlicher Unterstützung von:</p>
+		<div class="row logos float-all">
+			<img src="/assets/logo-ukr.png">
+			<img src="/assets/logo-hmkv.png">
+			<img src="/assets/logo-npn.png">
+			<img src="/assets/logo-ministerium.png">
+		</div>
 	</div>
 </div>
