--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
-<div id="scroll-header-1">CK EXCHANGE <span class="scroll-highlight">18 01 2014</span></div>
-<div id="scroll-header-2">gen auch Sie Ihre Utopie an die Börse. >> Folgen Sie dem <a href="#submission-form">Link</a></div>
+<div id="scroll-container-1" class="scroll-container"><div id="scroll-content-1" class="scroll-content">UTOPIA STOCK EXCHANGE <span class="scroll-highlight">18 01 2014 19:30&nbsp;</span></div></div>
+<div id="scroll-container-2" class="scroll-container"><div id="scroll-content-2" class="scroll-content">Bringen auch Sie Ihre Utopie an die Börse >> <a href="#submission-form">klicken Sie hier!</a> >>&nbsp;</div></div>
 
 <div id="page-1" class="page">
 		<img class="full-background" src="/assets/use-logos.jpg">
@@ -33,6 +33,7 @@
 				<p>Also, jetzt mal konkret? Was können Sie tun?</p>
 			</div>
 		</div>
+		<img class="ip-logo" src="/assets/use-ip-regenbogen.png">
 	</div>
 	<img class="full-background" src="/assets/kurve.png">
 </div>
@@ -40,6 +41,7 @@
 <a id="submission-form"></a>
 <div id="page-5" class="page">
 	<img class="full-background" src="/assets/stier.jpg">
+	<img class="stier-logo" src="/assets/use-stier-logo.png">
 	<div class="page-content">
 		<% if params[:id] %>
 			<h2>Ihre Utopie:</h2>
