--- a/app/views/submission_mailer/confirmation.html.erb
+++ b/app/views/submission_mailer/confirmation.html.erb
@@ -4,9 +4,8 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Vielen Dank!</h1>
-
-		<%= render partial: 'utopias/show_public' %>
-
+    <h1>Vielen Dank für Ihre Enreichung.</h1>
+		<p>Ihre Utopie wird nun geprüft. Wir melden uns.</p>
+		<p>Ihr Utopia Stock Exchange Team</p>	
   </body>
 </html>
