--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,21 +8,29 @@
 <div id="claim-2" class="claim">Seien Sie dabei, wenn Utopien live gehandelt werden.</div>
 <div id="claim-3" class="claim">Performance entscheidet.</div>
 
+<div class="main">
+
+<section>
 <div id="page-1" class="page">
 		<img class="full-background" src="/assets/use-logos.jpg">
 </div>
 
-<div id="spacer-1">
-</div>
+<div id="spacer-1"></div>
+</section>
 
+<section>
 <div id="page-2" class="page">
 		<img class="full-background" src="/assets/u-panorama-kurve.jpg">
 </div>
+</section>
 
+<section>
 <div id="page-3" class="page">
 		<img class="full-background" src="/assets/nyse.jpg">
 </div>
+</section>
 
+<section>
 <div id="page-4" class="page">
 	<div class="page-content">
 		<div class="row">
@@ -42,7 +50,9 @@
 	</div>
 	<img class="full-background" src="/assets/kurve.png">
 </div>
+</section>
 
+<section>
 <div id="page-5" class="page">
 	<img class="full-background" src="/assets/stier.jpg">
 	<img class="stier-logo" src="/assets/use-stier-logo.png">
@@ -56,7 +66,9 @@
 		<% end %>
 	</div>
 </div>
+</section>
 
+<section>
 <div id="page-6" class="page">
 	<div class="page-content">
 		<h3>USE Credits</h3>
@@ -64,7 +76,7 @@
 		<p>Nach einer Idee von Carolin Hochleichter, Sebastian Quack und Jutta Wangemann</p>
 		<p>Team USE Dortmund: Manuel Bürger, Daniel Boy, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
 		<p>Gestaltung: The Laboratory of Manuel Bürger</p>
-		<!--p>Photocredits: TODO</p-->
+		<p>Photocredits: REUTERS/Brendan McDermid</p>
 		<p>Mit freundlicher Unterstützung von:</p>
 		<div id="funder-logos" class="row logos float-all">
 			<img src="/assets/logo-ukr.png">
@@ -72,5 +84,9 @@
 			<img src="/assets/logo-npn.png">
 			<img src="/assets/logo-ministerium.png">
 		</div>
+		<div style="clear:both"></div>
 	</div>
+</div>
+</section>
+
 </div>
