--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -356,9 +356,19 @@ span.formlink {
 
 #page-6 .page-content p {
 	font-size: 18px;
-	max-width: 450px;
+/*	max-width: 450px;*/
 	margin-bottom: 24px;
 }
+
+#page-6 .page-content p a {
+	color: #666;
+}
+
+#page-6 .page-content div p.supersmall {
+		float: left;
+		font-size: 10px;
+		width: 200px;
+	}
 
 div.logos img {
 	height: 58px;
@@ -417,8 +427,7 @@ div.logos img {
 	#page-6 .page-content {
 		padding: 40px 10px 10px 10px;
 	}
-	
-	
+		
 	section {
 		height: auto !important;
 	}
