--- a/app/views/utopias/_form_public.html.erb
+++ b/app/views/utopias/_form_public.html.erb
@@ -23,7 +23,7 @@
 		</div>
 		<div class="col-2">
 			<div id="photo_attachment_container">
-			  <input class="file_input" value="Zeichnung oder Diagram" disabled>
+			  <input class="file_input" value="Zeichnung oder Diagramm" disabled>
 		  	<div class="wrapper">
 				  <%= f.file_field :image %>
 		  	</div>
