--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -36,12 +36,12 @@
 		<div class="row">
 			<div class="col-2">
 				<p>UTOPIA STOCK EXCHANGE (USE) macht das Dortmunder U zur Börse für Utopien und das Unionviertel zum neuen Dortmunder Börsenviertel.</p>
-				<p>Jede Stadt braucht einen Ort, an dem Bürgerinnen und Bürger Visionen für ihre Stadt in die Hand nehmen können. Sie drehen und wenden, ihren Realitätsgehalt überprüfen, ihre Strahlkraft spüren. Ein Zentrum, an dem – wie an der Börse – harte Realität auf radikale Phantasie trifft, an dem kollektiv geträumt, gerhandelt, bewertet und vielleicht abgestürzt wird. An dem die Zukunft ihrer Stadt von den Bürgerinnen und Bürgern selbst aufs Spiel gesetzt werden kann.</p> 
+				<p>Jede Stadt braucht einen Ort, an dem Bürgerinnen und Bürger Visionen für ihre Stadt in die Hand nehmen können. Sie drehen und wenden, ihren Realitätsgehalt überprüfen, ihre Strahlkraft spüren. Ein Zentrum, an dem – wie an der Börse – harte Realität auf radikale Phantasie trifft, an dem kollektiv geträumt, gehandelt, bewertet und vielleicht abgestürzt wird. An dem die Zukunft Ihrer Stadt von den Bürgerinnen und Bürgern selbst aufs Spiel gesetzt werden kann.</p> 
 				<p>Ein solches Zentrum gibt es in Dortmund bereits: Das Dortmunder U. UTOPIA STOCK EXCHANGE (USE) unternimmt den Versuch, das besondere Potential dieses Ortes auf die Spitze zu treiben: als Börse für Utopien. USE gibt ökonomische Prinzipien wie Spekulation und Teilhabe zurück an Bürgerinnen und Bürger der Stadt. USE handelt Utopien für Dortmund.</p>
 			</div>
 			<div class="col-2">
-				<p> An die Börse gebracht von Utopisten aus Dortmund. Ideen zur Verbesserung der Stadt, des Selbst oder der Welt – von Dortmund aus gesehen.</p>
-				<p>USE lässt den Ideen freien Lauf und fragt: Was würden Sie machen, wenn Geld, Zeit und Machbarkeit ausnahmsweise einmal überhaupt keine Rolle spielten? Wie sollte Dortmund sein, wenn alles möglich wäre? Was wäre anders in einer perfekten Welt? Wie wären Politik, Wirtschaft und soziales Miteinander in ihrer Wunschwelt organisiert? Beim Handelsabend am 18. Januar 2014 im Dortmunder U entscheidet sich, welche Utopie die meisten Anhänger findet und was am Ende zählt: Geld oder der Glaube an die Zukunft?</p>
+				<p>An die Börse gebracht von Utopisten aus Dortmund. Ideen zur Verbesserung der Stadt, des Selbst oder der Welt – von Dortmund aus gesehen.</p>
+				<p>USE lässt den Ideen freien Lauf und fragt: Was würden Sie machen, wenn Geld, Zeit und Machbarkeit ausnahmsweise einmal überhaupt keine Rolle spielten? Wie sollte Dortmund sein, wenn alles möglich wäre? Was wäre anders in einer perfekten Welt? Wie wären Politik, Wirtschaft und soziales Miteinander in Ihrer Wunschwelt organisiert? Beim Handelsabend am 18. Januar 2014 im Dortmunder U entscheidet sich, welche Utopie die meisten Anhänger findet und was am Ende zählt: Geld oder der Glaube an die Zukunft?</p>
 				<p>USE ist ein Spielformat von Invisible Playground – einer Künstlergruppe, die Spiele für Städte entwickelt, gemeinsam mit Dortmunder Bürgerinnen und Bürgern.</p>
 				<p>Also, jetzt mal konkret? Was können Sie tun?</p>
 			</div>
@@ -72,18 +72,24 @@
 <div id="page-6" class="page">
 	<div class="page-content">
 		<h3>USE Credits</h3>
-		<p>Utopia Stock Exchange:<br/>Das Börsen-Spiel von Invisible Playground<br/>in Zusammenarbeit mit HMKV Dortmund</p>
+		<p>Utopia Stock Exchange: Das Börsen-Spiel von Invisible Playground<br>
+		veranstaltet von Hartware MedienKunstVerein (HMKV) und Urbane Künste Ruhr im Rahmen des <a href="http://www.hmkv.de/_en/programm/programmpunkte/2013/Ausstellungen/2013_New_Industries_Festival.php" target="_blank">NEW INDUSTRIES FESTIVALS</a><br>
+		USE findet in Verbindung mit der <a href="http://www.hmkv.de/programm/programmpunkte/2014/Veranstaltungen/2014_NIF_Konferenz.php" target="_blank">NEW INDUSTRIES KONFERENZ: Geld und Schulden in der postindustriellen Welt</a> im Dortmunder U statt.</p>
+
+		<p>Team USE Dortmund: Daniel Boy, Manuel Bürger, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
 		<p>Nach einer Idee von Carolin Hochleichter, Sebastian Quack und Jutta Wangemann</p>
-		<p>Team USE Dortmund: Manuel Bürger, Daniel Boy, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
+
 		<p>Gestaltung: The Laboratory of Manuel Bürger</p>
-		<p>Photocredits: REUTERS/Brendan McDermid</p>
+		<p>Photocredits: Hans Jürgen Landes, REUTERS/Brendan McDermid</p>
 		<p>Mit freundlicher Unterstützung von:</p>
 		<div id="funder-logos" class="row logos float-all">
 			<img src="/assets/logo-ukr.png">
 			<img src="/assets/logo-hmkv.png">
 			<img src="/assets/logo-npn.png">
+			<p class="supersmall">Gefördert durch das NATIONALE PERFORMANCE NETZ (NPN) Gastspielförderung Tanz International aus Mitteln des Beauftragten der Bundesregierung für Kultur und Medien aufgrund eines Beschlusses des deutschen Bundestages</p>
 			<img src="/assets/logo-ministerium.png">
 		</div>
+
 		<div style="clear:both"></div>
 	</div>
 </div>
