new images of utopists

--- a/app/views/stocks/_show_gallery.html.erb
+++ b/app/views/stocks/_show_gallery.html.erb
@@ -9,7 +9,7 @@
 						<p>Im Handel ab dem 16.01.</p>
 					</div>
 					<div class="utopist">
-						<img src="/assets/portraits/utopist_<%= @stock.symbol %>.png"><br>
+						<img src="/assets/portraits/utopist_<%= @stock.symbol %>.jpg"><br>
 						<label class="utopist-name">Eine Utopie von <%= @stock.utopist %></label>
 					</div>
 
