minor credits update

--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -72,7 +72,7 @@
 		<div class="row">
 		<div class="col-2">
 
-		<p>Ein Spiel von <a href="http://invisibleplayground.com" target="_blank">Invisible Playground</a> veranstaltet von Hartware MedienKunstVerein (HMKV) und Urbane Künste Ruhr im Dortmunder U im Rahmen des <a href="http://www.hmkv.de/programm/programmpunkte/2013/Ausstellungen/2013_New_Industries_Festival.php" target="_blank">NEW INDUSTRIES FESTIVALS</a> und der <a href="http://www.hmkv.de/programm/programmpunkte/2014/Veranstaltungen/2014_NIF_Konferenz.php" target="_blank">NEW INDUSTRIES KONFERENZ: Geld und Schulden in der postindustriellen Welt</a></p>
+		<p>Ein Spiel von <a href="http://invisibleplayground.com" target="_blank">Invisible Playground</a> veranstaltet von Hartware MedienKunstVerein (HMKV) und Urbane Künste Ruhr im Dortmunder U im Rahmen des <a href="http://www.hmkv.de/programm/programmpunkte/2013/Ausstellungen/2013_New_Industries_Festival.php" target="_blank">NEW INDUSTRIES FESTIVALS</a>, der Ausstellung <a href="http://www.hmkv.de/programm/programmpunkte/2013/Ausstellungen/2013_NIF_Requiem_fuer_eine_Bank.php" target="_blank">REQUIEM FÜR EINE BANK</a> und der <a href="http://www.hmkv.de/programm/programmpunkte/2014/Veranstaltungen/2014_NIF_Konferenz.php" target="_blank">NEW INDUSTRIES KONFERENZ</a></p>
 
 		<p>Nach einer Idee von Carolin Hochleichter, Sebastian Quack und Jutta Wangemann</p>
 
