--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -15,7 +15,7 @@
 <div id="page-1" class="page">
 		<img class="full-background" src="/assets/himmel-new.png">
 		<div class="page-content">
-			<iframe width="723" height="439" src="//www.youtube.com/embed/pMBJN8-VGAg" frameborder="0" allowfullscreen></iframe>
+			<iframe width="723" height="439" src="//www.youtube.com/embed/7oG9b7c6frY" frameborder="0" allowfullscreen></iframe>
 		</div>
 </div>
 
