--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -79,7 +79,7 @@
 		</div>
 		<div class="col-2">
 
-		<p>Team USE Dortmund: Daniel Boy, Manuel Bürger, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra Lara</p>
+		<p>Team USE Dortmund: Daniel Boy, Manuel Bürger, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra-Lara</p>
 
 		<p>Gestaltung: The Laboratory of Manuel Bürger</p>
 		<p>Photocredits: Hans Jürgen Landes, REUTERS/Brendan McDermid</p>
