--- a/app/views/welcome/new.html.erb
+++ b/app/views/welcome/new.html.erb
@@ -81,7 +81,7 @@
 
 		<p>Team USE Dortmund: Daniel Boy, Manuel Bürger, Mira Frye, Anna Hentschel, Holger Heissmeyer, Christina Prötschner, Sebastian Quack, Wilma Renfordt, Fabian Saavedra-Lara</p>
 
-		<p>Gestaltung: The Laboratory of Manuel Bürger</p>
+		<p>Gestaltung Print & Medien: The Laboratory of Manuel Bürger</p>
 		<p>Photocredits: Hans Jürgen Landes, REUTERS/Brendan McDermid</p>
 
 		</div>
