add new user and settings

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
     <tr>
       <th>Name</th>
       <th>Balance</th>
-      <th>Type</th>
+      <th>Role</th>
       <th>Status</th>
       <th></th>
       <th></th>
@@ -18,7 +18,7 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.balance %></td>
-        <td><%= user.type %></td>
+        <td><%= user.role %></td>
         <td><%= user.status %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
