--- a/app/views/users/show_public.html.erb
+++ b/app/views/users/show_public.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<p id="notice"><%= params[:notice] %></p>
 
 <p>
   <strong>Name:</strong>
@@ -19,6 +19,3 @@
   <strong>Status:</strong>
   <%= @user.status %>
 </p>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
