--- a/app/views/transactions/new_public.html.erb
+++ b/app/views/transactions/new_public.html.erb
@@ -2,7 +2,7 @@
 
 <h1>New transaction</h1>
 
-<%= form_for(@transaction) do |f| %>
+<%= form_for(@transaction, :url => {:action => "create_public"}) do |f| %>
   <% if @transaction.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@transaction.errors.count, "error") %> prohibited this transaction from being saved:</h2>
